k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talks
  labels:
    app: talks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talks
  template:
    metadata:
      labels:
        app: talks
    spec:
      containers:
        - name: talks
          image: ghcr.io/sayjeyhi/talks:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              memory: "128Mi"
