k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talks-service
spec:
  selector:
    app: talks
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
